Add more Controller methods for providing new endpoints. Implementing new toDto for domain objects. Fixing a bug that caused the author to not be associated with the book when adding it.